Added some utility functions for dealing with DisMELS results and connectivity analyses.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,9 +2,13 @@ export(calcAvgConnectivityMatrix)
 export(calcConnectivityMatrices)
 export(calcConnectivityMatrix)
 export(doAnalysis.FractionRecruitingBySource)
+export(extractSuccessfulIndivs)
 export(plotConnectivityMatrices)
 export(plotConnectivityMatrix)
 export(plotFractionRecruitingBySource)
+export(unzipDisMELSResults)
+export(writeConnectivityMatrices.ToCSV)
+export(writeIndividualConnectivity.ToCSV)
 import(RColorBrewer)
 import(graphics)
 import(sqldf)
