Committing extractSuccessfulIndividuals and associated functions.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@ export(calcConnectivityMatrices)
 export(calcConnectivityMatrix)
 export(doAnalysis.FractionRecruitingBySource)
 export(extractSuccessfulIndivs)
+export(extractSuccessfulIndivs.MultipleRuns)
 export(plotConnectivityMatrices)
 export(plotConnectivityMatrix)
 export(plotFractionRecruitingBySource)
@@ -12,6 +13,7 @@ export(writeIndividualConnectivity.ToCSV)
 import(RColorBrewer)
 import(graphics)
 import(sqldf)
+importFrom(tcltk,tk_choose.dir)
 importFrom(wtsPlotUtils,createColorScale)
 importFrom(wtsUtilities,computeStats)
 importFrom(wtsUtilities,getCSV)
