Now exporting getLifeStages functions.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,8 @@ export(calcConnectivityMatrix)
 export(doAnalysis.FractionRecruitingBySource)
 export(extractSuccessfulIndivs)
 export(extractSuccessfulIndivs.MultipleRuns)
+export(getLifeStageInfo.ATF)
+export(getLifeStageInfo.POP)
 export(plotConnectivityMatrices)
 export(plotConnectivityMatrix)
 export(plotFractionRecruitingBySource)
