Updated some files.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,7 +1,11 @@
 export(calcAvgConnectivityMatrix)
 export(calcConnectivityMatrices)
 export(calcConnectivityMatrix)
+export(compareIndivTrajectories)
 export(doAnalysis.FractionRecruitingBySource)
+export(extractAllIndivs)
+export(extractAllIndivs.MultipleRuns)
+export(extractIndivIDs)
 export(extractSuccessfulIndivs)
 export(extractSuccessfulIndivs.MultipleRuns)
 export(getLifeStageInfo.ATF)
