Removed dependence on wtsPlotUtils, which has been incorporated into wtsUtilities.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,9 @@ export(calcAvgConnectivityMatrix)
 export(calcConnectivityMatrices)
 export(calcConnectivityMatrix)
 export(doAnalysis.FractionRecruitingBySource)
+export(extractAllIndivs)
+export(extractAllIndivs.MultipleRuns)
+export(extractIndivIDs)
 export(extractSuccessfulIndivs)
 export(extractSuccessfulIndivs.MultipleRuns)
 export(getLifeStageInfo.ATF)
@@ -16,6 +19,6 @@ import(RColorBrewer)
 import(graphics)
 import(sqldf)
 importFrom(tcltk,tk_choose.dir)
-importFrom(wtsPlotUtils,createColorScale)
 importFrom(wtsUtilities,computeStats)
+importFrom(wtsUtilities,createColorScale)
 importFrom(wtsUtilities,getCSV)
