--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,13 +2,18 @@ Package: wtsDisMELSConn
 Type: Package
 Title: Functions for calculating and analyzing connectivity matrices based on
     DisMELS IBM model output.
-Version: 1.0
-Date: 2014-04-10
+Version: 1.0.1
+Date: 2014-07-30
 Author: William T. Stockhausen
 Maintainer: William T. Stockhausen <william.stockhausen@noaa.gov>
 Description: Provides a set of functions for calculating and analyzing
     connectivity matrices based on DisMELS model output.
 License: MIT
+Depends:
+    graphics,
+    RColorBrewer,
+    sqldf,
+    wtsUtilities
 Imports:
     graphics,
     RColorBrewer,
