Incremented version to 1.0.4. Consolidated extractAllIndivs() and extractSuccessfulIndivs() functions into extractIndivs(). Also consolidated MultipleRuns versions of these functions.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,13 +5,12 @@ export(calcConnectivityMatrices)
 export(calcConnectivityMatrix)
 export(compareIndivTrajectories)
 export(doAnalysis.FractionRecruitingBySource)
-export(extractAllIndivs)
-export(extractAllIndivs.MultipleRuns)
 export(extractIndivIDs)
-export(extractSuccessfulIndivs)
-export(extractSuccessfulIndivs.MultipleRuns)
+export(extractIndivs)
+export(extractIndivs.MultipleRuns)
 export(getLifeStageInfo.ATF)
 export(getLifeStageInfo.POP)
+export(getStdVars)
 export(plotConnectivityMatrices)
 export(plotConnectivityMatrix)
 export(plotFractionRecruitingBySource)
@@ -20,7 +19,7 @@ export(writeConnectivityMatrices.ToCSV)
 export(writeIndividualConnectivity.ToCSV)
 import(RColorBrewer)
 import(graphics)
-import(sqldf)
+importFrom(sqldf,sqldf)
 importFrom(tcltk,tk_choose.dir)
 importFrom(wtsUtilities,computeStats)
 importFrom(wtsUtilities,createColorScale)
