--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: wtsDisMELSConn
 Type: Package
-Title: Functions for calculating and analyzing connectivity matrices based on
-    DisMELS IBM model output.
-Version: 1.0.3
+Title: Functions for dealing with DisMELS IBM model output, including
+    calculating and analyzing connectivity matrices
+Version: 1.0.4
 Date: 2014-11-05
 Author: William T. Stockhausen
 Maintainer: William T. Stockhausen <william.stockhausen@noaa.gov>
-Description: Provides a set of functions for calculating and analyzing
-    connectivity matrices based on DisMELS model output.
+Description: Provides a set of functions for dealing with DisMELS model output,
+    including calculating and analyzing connectivity matrices.
 License: MIT
 Imports:
     graphics,
