Minor changes to extract... functions.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(unzipDisMELSResults)
 export(writeConnectivityMatrices.ToCSV)
 export(writeIndividualConnectivity.ToCSV)
 import(RColorBrewer)
+import(ggplot2)
 import(graphics)
 importFrom(sqldf,sqldf)
 importFrom(tcltk,tk_choose.dir)
