Incremented version to 1.0.5 to reflect changes. Added extractResultsByLHS.MultipleRuns(). Changed input to getStdVars() to be a string ('NEW'/'OLD') rather than a logical.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(extractIndivIDs)
 export(extractIndivs)
 export(extractIndivs.MultipleRuns)
 export(extractResultsByLHS)
+export(extractResultsByLHS.MultipleRuns)
 export(getLifeStageInfo.ATF)
 export(getLifeStageInfo.POP)
 export(getStdVars)
