Corrected problems in extractIndivs(). Created plotTimeSeriesofIndivValues() (renamed from compareIndivTrajectories) and plotFractionRemaining().

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,6 @@
 export(calcAvgConnectivityMatrix)
 export(calcConnectivityMatrices)
 export(calcConnectivityMatrix)
-export(compareIndivTrajectories)
 export(doAnalysis.FractionRecruitingBySource)
 export(extractIndivIDs)
 export(extractIndivs)
@@ -16,6 +15,8 @@ export(getStdVars)
 export(plotConnectivityMatrices)
 export(plotConnectivityMatrix)
 export(plotFractionRecruitingBySource)
+export(plotFractionRemaining)
+export(plotTimeSeriesofIndivValues)
 export(unzipDisMELSResults)
 export(writeConnectivityMatrices.ToCSV)
 export(writeIndividualConnectivity.ToCSV)
