Incremented to v1.1.0. Added concatAnnualTables() to concatenate various tables by year. Added plotConnectivityMAtrixGG().

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Package: wtsDisMELSConn
 Type: Package
 Title: Functions for dealing with DisMELS IBM model output, including
     calculating and analyzing connectivity matrices
-Version: 1.0.7
-Date: 2015-02-03
+Version: 1.1.0
+Date: 2015-10-29
 Author: William T. Stockhausen
 Maintainer: William T. Stockhausen <william.stockhausen@noaa.gov>
 Description: Provides a set of functions for dealing with DisMELS model output,
@@ -11,6 +11,7 @@ Description: Provides a set of functions for dealing with DisMELS model output,
 License: MIT
 Imports:
     graphics,
+    ggplot2,
     RColorBrewer,
     sqldf,
     wtsUtilities
