--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,12 +21,14 @@ export(plotConnectivityMatrix)
 export(plotConnectivityMatrixGG)
 export(plotFractionRecruitingBySource)
 export(plotFractionRemaining)
+export(plotHistogram)
 export(plotTimeSeriesofIndivValues)
 export(unzipDisMELSResults)
 export(writeIndivConns)
 import(RColorBrewer)
 import(ggplot2)
 import(graphics)
+import(grid)
 import(plyr)
 import(sqldf)
 import(wtsUtilities)
