Added concatenateEIs(). Primarily cleaned up documentation errors. Incremented version to 1.1.9.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(calcLinRegs.RbyI)
 export(calcLinRegs.YbyXs)
 export(calcLinRegs.YsByX)
 export(concatAnnualTables)
+export(concatenateEIs)
 export(doAnalysis.FractionRecruitingBySource)
 export(extractIndivIDs)
 export(extractIndivs)
@@ -34,8 +35,11 @@ import(plyr)
 import(reshape2)
 import(sqldf)
 import(wtsUtilities)
+importFrom(reshape2,melt)
 importFrom(sqldf,sqldf)
 importFrom(tcltk,tk_choose.dir)
+importFrom(tcltk,tk_choose.files)
+importFrom(wtsUtilities,addFilter)
 importFrom(wtsUtilities,computeStats)
 importFrom(wtsUtilities,createColorScale)
 importFrom(wtsUtilities,getCSV)
