Created calcLRs.YsByXs(...). Incremented version to 1.2.5.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(calcCMs)
 export(calcLRs.RbyI)
 export(calcLRs.YbyXs)
 export(calcLRs.YsByX)
+export(calcLRs.YsByXs)
 export(concatAnnualTables)
 export(concatEIs)
 export(doAnalysis.FractionRecruitingBySource)
