Added convertLabelToExpr(). Incremented version to 1.2.6.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(calcLRs.YsByX)
 export(calcLRs.YsByXs)
 export(concatAnnualTables)
 export(concatEIs)
+export(convertLabelToExpr)
 export(doAnalysis.FractionRecruitingBySource)
 export(extractIndivIDs)
 export(extractIndivs)
