Copied old calcCM functions to calcCM(s).orig. Revised (new) calcCM functions to allow "successful" individuals to be defined using a user-input "where" clause. Revised version number to reflect date.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,10 @@
 
 export(aggregateCMs)
 export(calcCM)
+export(calcCM.orig)
 export(calcCMs)
+export(calcCMs.orig)
+export(calcIC)
 export(calcLRs.RbyI)
 export(calcLRs.YbyXs)
 export(calcLRs.YsByX)
